--- a/src/app/categories.html
+++ b/src/app/categories.html
@@ -11,15 +11,15 @@
   <tr ng-repeat="category in $ctrl.categories">
     <td>{{category.name}}</td>
     <td>{{category.trees}}</td>
-    <td><button type="button" class="btn btn-primary" type="button" ng-click="$ctrl.show(category)">Show</button></td>
-    <td><button type="button" class="btn btn-primary" type="button" ng-click="$ctrl.delete(category)">Delete</button></td><br>
+    <td><button type="button" class="btn btn-primary" ng-click="$ctrl.show(category)">Show</button></td>
+    <td><button type="button" class="btn btn-primary" ng-click="$ctrl.delete(category)">Delete</button></td><br>
   </tr>
 
   <tr>
+    <td><input type="text" class="form-control" ng-model="$ctrl.toAdd.name"/></td>
+    <td><input type="text" class="form-control" ng-model="$ctrl.toAdd.trees"/></td>
     <td></td>
-    <td></td>
-    <td></td>
-    <td><button type="button" class="btn btn-primary" type="button" ng-click="$ctrl.add(category)">Add</button></td>
+    <td><button type="button" class="btn btn-primary" ng-click="$ctrl.add()">Add</button></td><br>
   </tr>
 </table>
 
