--- a/src/app/categories.html
+++ b/src/app/categories.html
@@ -5,19 +5,29 @@
     <th>Amount of Trees</th>
     <th>#</th>
     <th>#</th>
+    <th>#</th>
+
   </tr>
   </thead>
 
   <tr ng-repeat="category in $ctrl.categories">
-    <td>{{category.name}}</td>
-    <td>{{category.trees}}</td>
+    <td ng-if="!category.editMode">{{category.name}}</td>
+    <td ng-if="category.editMode"><input type="text" class="form-control" ng-model="category.toEdit.name"/></td>
+
+    <td ng-if="!category.editMode">{{category.trees}}</td>
+    <td ng-if="category.editMode"><input type="number" class="form-control" ng-model="category.toEdit.trees"/></td>
+
     <td><button type="button" class="btn btn-primary" ng-click="$ctrl.show(category)">Show</button></td>
+
+    <td ng-if="!category.editMode"><button type="button" class="btn btn-primary" ng-click="$ctrl.editMode(category)">Edit</button></td><br>
+    <td ng-if="category.editMode"><button type="button" class="btn btn-primary" ng-click="$ctrl.edit(category)">Save</button></td><br>
+
     <td><button type="button" class="btn btn-primary" ng-click="$ctrl.delete(category)">Delete</button></td><br>
   </tr>
 
   <tr>
     <td><input type="text" class="form-control" ng-model="$ctrl.toAdd.name"/></td>
-    <td><input type="text" class="form-control" ng-model="$ctrl.toAdd.trees"/></td>
+    <td><input type="number" class="form-control" ng-model="$ctrl.toAdd.trees"/></td>
     <td></td>
     <td><button type="button" class="btn btn-primary" ng-click="$ctrl.add()">Add</button></td><br>
   </tr>
