JWT integration and dummy login component

--- a/src/app/home.html
+++ b/src/app/home.html
@@ -1,1 +1,2 @@
-<categories></categories>
+<login ng-if="!$ctrl.authenticated" authenticated="$ctrl.authenticated"></login>
+<categories ng-if="$ctrl.authenticated"></categories>
