Password change component

--- a/src/app/categories.html
+++ b/src/app/categories.html
@@ -1,3 +1,5 @@
+<span class="alert alert-danger" ng-if="$ctrl.error">{{$ctrl.errorMessage}}</span>
+
 <table class="table table-stripped">
   <thead class="thead-default">
   <tr>
