--- a/src/app/home.html
+++ b/src/app/home.html
@@ -1,5 +1,8 @@
 
 <login ng-if="!$ctrl.authenticated" authenticated="$ctrl.authenticated"></login>
 
+<button ng-if="$ctrl.authenticated" class="btn btn-info" type="button" ng-click="$ctrl.mode = 'CATEGORIES'">Manage categries</button>
+<button ng-if="$ctrl.authenticated" class="btn btn-info" type="button" ng-click="$ctrl.mode = 'CHANGE_PASSWORD'">Change password</button>
 <button ng-if="$ctrl.authenticated" class="btn btn-danger" type="button" ng-click="$ctrl.logout()">Logout</button>
-<categories ng-if="$ctrl.authenticated"></categories>
+<users-component ng-if="$ctrl.authenticated && $ctrl.mode === 'CHANGE_PASSWORD'"></users-component>
+<categories ng-if="$ctrl.authenticated && $ctrl.mode === 'CATEGORIES'"></categories>
