--- a/src/app/login..html
+++ b/src/app/login..html
@@ -2,11 +2,11 @@
   <span class="alert alert-danger" ng-if="$ctrl.error" >{{$ctrl.errorMessage}}</span> <br> <br>
   <div class="form-group">
     <label for="username">Username:</label>
-    <input type="text" ng-model="$ctrl.username" class="form-control" id="username">
+    <input type="text" ng-model="$ctrl.username" class="form-control" id="username" autofocus>
   </div>
   <div class="form-group">
     <label for="password">Password:</label>
     <input type="password" ng-model="$ctrl.password" class="form-control" id="password">
   </div>
-  <button class="btn btn-primary" type="button" ng-click="$ctrl.login()" autofocus>Login</button>
+  <button class="btn btn-primary" type="button" ng-click="$ctrl.login()">Login</button>
 </div>
